--- a/web/src/components/Footer.astro
+++ b/web/src/components/Footer.astro
@@ -13,6 +13,7 @@
 					<ul class="space-y-3">
 						<li><a href="/contact" class="text-white/80 hover:text-gold transition-colors duration-300">Contact Us</a></li>
 						<li><a href="/faq" class="text-white/80 hover:text-gold transition-colors duration-300">FAQ</a></li>
+						<li><a href="/custom-orders" class="text-white/80 hover:text-gold transition-colors duration-300">Custom Orders</a></li>
 					</ul>
 				</div>
 
@@ -20,7 +21,7 @@
 				<div>
 					<h4 class="font-playfair text-xl font-semibold text-gold mb-6">About</h4>
 					<ul class="space-y-3">
-						<li><a href="/our-story" class="text-white/80 hover:text-gold transition-colors duration-300">Our Story</a></li>
+						<li><a href="/about" class="text-white/80 hover:text-gold transition-colors duration-300">Our Story</a></li>
 					<!--	<li><a href="/blog" class="text-white/80 hover:text-gold transition-colors duration-300">Blog</a></li> -->
 					</ul>
 				</div>
