Changed the Sales word to SALE

--- a/web/src/components/Header.astro
+++ b/web/src/components/Header.astro
@@ -118,7 +118,7 @@ import SearchBar from './SearchBar.astro';
 						<path d="M21.41 11.41L19 9l-1.41 1.41L21.17 14l3.59-3.59-1.35-1.35z"/>
 						<path d="M12 2l-5.5 9h11L12 2zm0 3.84L13.93 9h-3.87L12 5.84zM17.5 13c-2.49 0-4.5 2.01-4.5 4.5s2.01 4.5 4.5 4.5 4.5-2.01 4.5-4.5-2.01-4.5-4.5-4.5zm0 7c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM3 21.5h8v-8H3v8zm2-6h4v4H5v-4z"/>
 					</svg>
-					<span>Sales</span>
+					<span>SALE</span>
 				</a>
 							</div>
 
@@ -222,7 +222,7 @@ import SearchBar from './SearchBar.astro';
 					<path d="M21.41 11.41L19 9l-1.41 1.41L21.17 14l3.59-3.59-1.35-1.35z"/>
 					<path d="M12 2l-5.5 9h11L12 2zm0 3.84L13.93 9h-3.87L12 5.84zM17.5 13c-2.49 0-4.5 2.01-4.5 4.5s2.01 4.5 4.5 4.5 4.5-2.01 4.5-4.5-2.01-4.5-4.5-4.5zm0 7c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM3 21.5h8v-8H3v8zm2-6h4v4H5v-4z"/>
 				</svg>
-				<span class="font-medium">Sales</span>
+				<span class="font-medium">SALE</span>
 			</a>
 			
 			<!-- Mobile Account Links -->
