--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -17,32 +17,107 @@ const homepageSchema = {
   "@context": "https://schema.org",
   "@type": "WebSite",
   "name": "Ethnic Treasures",
-  "description": "Discover premium handcrafted Ethnic clothing at Ethnic Treasures. Shop our curated collection of sarees, kurtis, lehengas, and more, all crafted by skilled artisans using traditional techniques.",
-  "url": new URL('/', Astro.url.origin).href,
+  "url": "https://ethnictreasures.co.in",
+  "description": "Handcrafted ethnic bags, crochet throws, embroidered clutches, and artisan-made accessories celebrating Indian craftsmanship.",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Ethnic Treasures",
+    "url": "https://ethnictreasures.co.in"
+  },
   "potentialAction": {
     "@type": "SearchAction",
     "target": {
       "@type": "EntryPoint",
-      "urlTemplate": new URL('/search?q={search_term_string}', Astro.url.origin).href
+      "urlTemplate": "https://ethnictreasures.co.in/search?q={search_term_string}"
     },
     "query-input": "required name=search_term_string"
   },
   "sameAs": [
-    "https://www.instagram.com/ethnic.treasures",
-    "https://www.facebook.com/EthnicTreasures",
-    "https://twitter.com/EthnicTreasures"
+    "https://www.instagram.com/crochets.ethnictreasures?igsh=Z3I5ejZ1dnRjbDJn",
+    "https://www.facebook.com/profile.php?id=61570085747797",
+    "https://x.com/EthnicTreasure",
+    "https://in.pinterest.com/ethnictreasures02",
+    "https://www.youtube.com/@Crochets.ethnictreasures",
+    "https://www.linkedin.com/company/ethnictreasures/?viewAsMember=true"
+  ]
+};
+
+// ItemList schema for product categories
+const categoryListSchema = {
+  "@context": "https://schema.org",
+  "@type": "ItemList",
+  "name": "Product Categories - Ethnic Treasures",
+  "description": "Browse our collection of handcrafted ethnic products including bags, throws, and accessories",
+  "url": "https://ethnictreasures.co.in",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Leather / Faux Leather Bags",
+      "url": "https://ethnictreasures.co.in/leather-bags"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Ethnic Pouches",
+      "url": "https://ethnictreasures.co.in/ethnic-pouches"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Hand Bags",
+      "url": "https://ethnictreasures.co.in/hand-bags"
+    },
+    {
+      "@type": "ListItem",
+      "position": 4,
+      "name": "Laptop Bags",
+      "url": "https://ethnictreasures.co.in/laptop-bags"
+    },
+    {
+      "@type": "ListItem",
+      "position": 5,
+      "name": "Tote Bags",
+      "url": "https://ethnictreasures.co.in/tote-bags"
+    },
+    {
+      "@type": "ListItem",
+      "position": 6,
+      "name": "Crochet Throws",
+      "url": "https://ethnictreasures.co.in/crochet-throws"
+    },
+    {
+      "@type": "ListItem",
+      "position": 7,
+      "name": "Embroidered Clutches",
+      "url": "https://ethnictreasures.co.in/embroidered-clutches"
+    },
+    {
+      "@type": "ListItem",
+      "position": 8,
+      "name": "Baby Throws",
+      "url": "https://ethnictreasures.co.in/baby-throw"
+    },
+    {
+      "@type": "ListItem",
+      "position": 9,
+      "name": "Everyday Bags",
+      "url": "https://ethnictreasures.co.in/everyday-bags"
+    }
   ]
 };
 
 ---
 
-<Layout 
-  title="Ethnic Treasures - Crafting Tradition, Weaving Stories" 
-  description="Discover premium handcrafted Ethnic clothing at Ethnic Treasures. Shop our curated collection of sarees, kurtis, lehengas, and more, all crafted by skilled artisans using traditional techniques."
-  keywords="ethnic wear, sarees, kurtis, lehengas, traditional clothing, handcrafted, artisan products, cultural fashion, ethnic treasures"
+<Layout
+  title="Ethnic Treasures | Handcrafted Bags, Crochet Throws & Artisan Accessories"
+  description="Shop handcrafted ethnic bags, crochet throws, embroidered clutches, and artisan-made accessories inspired by Indian craftsmanship."
+  keywords="handcrafted bags, ethnic bags, crochet throws, embroidered clutches, laptop bags, tote bags, artisan accessories, handmade Indian products"
   ogType="website"
   structuredData={homepageSchema}
->
+/>
+
+	<script type="application/ld+json" set:html={JSON.stringify(categoryListSchema)} />
 	<NewYearPopup />
 	<Header />
 	<BannerContainer 
